language/move-lang/tests/move_check/expansion/global_access_pack.move
module M {
    fun foo() {
        ::S { }
    }
}
